Extends the RiscvMainDecoder to have an attribute indicating if the Stall signal should be shown